[project]
name = "molecular-dynamics"
version = "0.1.0"
description = ""
authors = [
    {name = "girish",email = "mohangiri1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
